generate links: red text and broken expand/collapse buttons fixed

--- a/silk-workbench/silk-workbench-core/public/mdl-adjustments.css
+++ b/silk-workbench/silk-workbench-core/public/mdl-adjustments.css
@@ -353,3 +353,18 @@
 .learning_path_label {
   font-weight: bold;
 }
+
+/*
+* Generate Links
+*/
+
+#results a {
+  color: #000000;
+}
+
+.source-value {
+  white-space: nowrap;
+  word-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
